-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0
-
-
e242146ba (dev), 2b031ed7b (6.10), 3c315c86e (6.9)
-
Foundation Sprint 131, Foundation Sprint 132
Looks like the width of a ToolTip native window is slightly too small on macOS, causing a wordwrap. This does not occur on Windows.
Please see screenshots.
Reproducer:
import QtQuick import QtQuick.Controls Window { width: 640 height: 480 visible: true title: qsTr("Hello World") Button { text: "Hover me" Component.onCompleted: { ToolTip.toolTip.popupType = Popup.Native } ToolTip.visible: hovered ToolTip.text: "This is a ToolTip" } }
| For Gerrit Dashboard: QTBUG-130683 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 652173,3 | Fix tooltip wrapping on macOS when using native window | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 652846,2 | Fix tooltip wrapping on macOS when using native window | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 653092,2 | Fix tooltip wrapping on macOS when using native window | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |