Fix tooltip wrapping on macOS when using native window

The initial window size is stored using qreal dimensions that were
implicitly truncated when passed to QWindow::resize(int, int).
This caused tooltips with multiple words to wrap unnecessarily on macOS.
By explicitly using qCeil() when resizing the popup window, the
calculated width and height are rounded up, preserving the intended
layout.

Fixes: QTBUG-130683
Change-Id: I7305d02263108df72ff0c5cc81f5a7a829d9f755
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit e242146bab19676f7c699f3372b328c6fc01557b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 2b031ed7b6a25184fb2129e1ec8f744774b6236e)